[project]
name = "f1-pit-perfect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "pandas>=2.3.1",
    "pandas-stubs>=3.0.0.260204",
    "requests>=2.32.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
